<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AQA</string>
    <!-- main -->
    <string name="welcome">WELCOME</string>
    <string name="language">EN</string>
    <string name="subtitle">Indoor Air Quality Monitor Application</string>
    <string name="signup_gg">CONTINUE WITH GOOGLE</string>
    <string name="login_caps">LOG IN</string>
    <string name="signup_suggest">Don\'t have an account? <b>Sign Up</b></string>
    <string name="sign_up">Sign Up</string>


    <!-- login -->
    <string name="login_suggest">Already have an account? <b>Login</b></string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="re_pass">Retype Password</string>
    <string name="login_success">Log in successful</string>
    <string name="login_fail">Log in fail!</string>
    <string name="save_account">Remember me</string>
    <string name="forgot_pass">Forgot password?</string>

    <!-- signup -->
    <string name="login">Log in</string>
    <string name="signup_caps">SIGN UP</string>
    <string name="register">REGISTER</string>
    <string name="form_warning">This field required!</string>
    <string name="email_warning">Enter the valid email!</string>
    <string name="password_warning">Password don\'t match</string>
    <string name="signup_success">Sign up successful</string>
    <string name="invalidPass">Invalid password</string>

    <string name="permission_granted">Permission Granted</string>
    <string name="map">MAP</string>
    <string name="load_map_error">Fail to load map</string>
    <string name="get_permission">You should need the access permission</string>

    <string name="hi">Hi, </string>
    <string name="humidity">Humidity</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="rainfall">Rainfall</string>
    <string name="notes">Notes</string>
    <string name="wind_direction">Wind direction</string>
    <string name="wind_speed">Wind speed</string>
    <string name="uv_index">UV Index</string>
    <string name="temperature">Temperature</string>
    <string name="tags">Tags</string>
    <string name="sun_altitude">Sun altitude</string>
    <string name="sun_irradiance">Sun irradiance</string>
    <string name="sun_azimuth">Sun azimuth</string>
    <string name="sun_zenith">Sun zenith</string>

    <string name="close">CLOSE</string>
    <string name="view_detail">DETAILS</string>
    <string name="title_weather">WEATHER</string>
    <string name="title_light">LIGHT</string>


    <string name="brightness">Brightness</string>
    <string name="onOff">On/off</string>
    <string name="colour_temperature">Colour Temperature</string>
    <string name="colour_RGB">Colour RGB</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="chart">CHART</string>
    <string name="select_attribute">Select attribute</string>
    <string-array name="attributes">
        <item>Humidity</item>
        <item>Temperature</item>
        <item>Rainfall</item>
        <item>Wind speed</item>
    </string-array>

    <string-array name="timeframes">
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string name="timeframe">Timeframe</string>
    <string name="ending">Ending</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="date">Day month year</string>
    <string name="show">SHOW</string>
    <string name="input_warning">Please fill the date input</string>

    <string name="profile">PROFILE</string>
    <string name="logout">LOG OUT</string>
    <string name="realm">Realm</string>
    <string name="user_id">ID</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="enabled">Enabled</string>
    <string name="service_account">Service account</string>
    <string name="true_value">True</string>
    <string name="false_value">False</string>
    <string name="create_on">Create on</string>
    <string name="ok">OK</string>
    <string name="warning_api">Error. Please try again</string>
</resources>