<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_gravity="bottom"
    android:background="@drawable/popup_form"

    >
    <RelativeLayout
        android:id="@+id/title_popup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@drawable/back_popup_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_light"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_below="@+id/title_popup"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_above="@+id/footer_popup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!-- Phần 1 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:orientation="vertical">
                <!-- Nội dung của phần 1 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/brightness_info"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/brightness"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:layout_marginLeft="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/colourTemperature_info"
                    android:text="@string/colour_temperature"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/onOff_info"
                    android:text="@string/onOff"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp" />


            </LinearLayout>

            <!-- Phần 2 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:orientation="vertical">
                <!-- Nội dung của phần 2 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:id="@+id/brightness_value"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="right"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginRight="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/colourTemperature_value"
                    android:layout_gravity="right"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white"

                    android:layout_marginRight="8dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/onOff_value"
                    android:textColor="@color/white"
                    android:layout_gravity="right"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp" />
            </LinearLayout>

        </LinearLayout>
        <RelativeLayout
            android:id="@+id/footer_popup"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true" >

            <android.widget.Button
                android:id="@+id/close_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/gradient"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/close"
                android:textColor="@color/white"
                android:paddingLeft="8dp"
                android:textSize="14sp"
                android:paddingRight="8dp" />
            <android.widget.Button
                android:id="@+id/view_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/gradient"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/view_detail"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp" />
        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>