<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="275dp"
    android:background="@drawable/popup_form"
    android:layout_gravity="bottom"
    >
    <RelativeLayout
        android:id="@+id/title_popup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/back_popup_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_weather"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/title_popup"
        android:layout_height="match_parent" >
            <LinearLayout
                android:layout_above="@+id/footer_popup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <!-- Phần 1 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:orientation="vertical">
                    <!-- Nội dung của phần 1 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/manufacturer_info"
                        android:textColor="@color/white"
                        android:text="@string/manufacturer"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:textSize="20sp"
                        android:layout_marginLeft="8dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/humidity_info"
                        android:text="@string/humidity"
                        android:textStyle="bold"

                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rainfall_info"
                        android:text="@string/rainfall"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/temperature_info"
                        android:text="@string/temperature"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/white"
                        android:layout_marginLeft="8dp" />

                </LinearLayout>

                <!-- Phần 2 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginRight="8dp"
                    android:orientation="vertical">
                    <!-- Nội dung của phần 2 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/manufacturer_value"
                        android:layout_marginTop="8dp"
                        android:layout_gravity="right"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"

                        android:layout_marginRight="8dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/humidity_value"
                        android:layout_gravity="right"
                        android:textSize="20sp"
                        android:textStyle="bold"

                        android:textColor="@color/white"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rainfall_value"
                        android:textColor="@color/white"
                        android:layout_gravity="right"
                        android:textSize="20sp"
                        android:textStyle="bold"

                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/temperature_value"
                        android:textSize="20sp"
                        android:textStyle="bold"

                        android:layout_marginTop="8dp"
                        android:textColor="@color/white"
                        android:layout_gravity="right"
                        android:layout_marginRight="8dp" />
                </LinearLayout>

            </LinearLayout>
        <RelativeLayout
            android:id="@+id/footer_popup"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true" >

            <android.widget.Button
                android:id="@+id/close_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/gradient"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/close"
                android:textColor="@color/white"
                android:paddingLeft="8dp"
                android:textSize="16sp"
                android:paddingRight="8dp" />
            <android.widget.Button
                android:id="@+id/view_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/gradient"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/view_detail"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:paddingRight="4dp"
                android:paddingLeft="4dp"
                />


        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>