<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F19AF4"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/toolbar_chart"
        android:background="@drawable/back_title_map"
        android:layout_marginBottom="10dp"

        android:layout_height="wrap_content" >
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="4dp"
            />

        <TextView
            android:id="@+id/title_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:drawableLeft="@drawable/ic_user_2"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_chart"
        android:layout_above="@+id/bottom_toolbar"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="36dp"
                    android:layout_marginEnd="36dp"
                    android:layout_marginBottom="36dp"
                    app:shapeAppearanceOverlay="@style/ImageView.Circle"
                    app:srcCompat="@drawable/ic_avatar_default" />

                <ImageButton
                    android:id="@+id/edit_avatar"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:background="@drawable/back_circle"
                    android:padding="8dp"
                    android:src="@drawable/ic_edit"
                    android:layout_marginTop="16dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignBottom="@+id/profile_picture"
                    app:tint="@color/white" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/form_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/backform"
                    android:padding="12dp"
                    >

                    <TextView
                        android:id="@+id/realm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="10dp"
                        android:text="@string/realm"
                        android:layout_alignParentLeft="true"
                        android:textColor="@color/back_gradient_start"
                        android:textSize="18sp"
                         />

                    <TextView
                        android:id="@+id/user_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:text="@string/user_id"
                        android:layout_below="@+id/realm"
                        android:layout_alignParentLeft="true"
                        android:textColor="@color/back_gradient_start"
                        android:textSize="18sp"
                         />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/first_name"
                        android:layout_below="@+id/user_id_value"
                        android:textSize="18sp"
                        android:layout_alignParentLeft="true"
                        android:layout_marginBottom="10dp"
                        android:text="@string/first_name"
                        android:textColor="@color/back_gradient_start" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/first_name"
                        android:textSize="18sp"
                        android:id="@+id/last_name"
                        android:layout_marginBottom="10dp"
                        android:text="@string/last_name"
                        android:textColor="@color/back_gradient_start" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:id="@+id/email"
                        android:layout_below="@+id/last_name"
                        android:textSize="18sp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/email"
                        android:textColor="@color/back_gradient_start" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:id="@+id/enabled"
                        android:layout_below="@+id/email"
                        android:textSize="18sp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/enabled"
                        android:textColor="@color/back_gradient_start" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:id="@+id/service"
                        android:layout_below="@+id/enabled"
                        android:textSize="18sp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/service_account"
                        android:textColor="@color/back_gradient_start" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:id="@+id/username"
                        android:layout_below="@+id/service"
                        android:textSize="18sp"
                        android:text="@string/username"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/back_gradient_start" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:id="@+id/create_on"
                        android:layout_below="@+id/username"
                        android:textSize="18sp"
                        android:text="@string/create_on"
                        android:textColor="@color/back_gradient_start" />


                    <TextView
                        android:id="@+id/realm_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="4dp"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/back_gradient_start"
                        android:textSize="18sp"
                         />
                    <TextView
                        android:id="@+id/user_id_value"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_below="@+id/realm"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/back_gradient_start"
                        android:textSize="18sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/first_name_value"
                        android:layout_below="@+id/user_id_value"
                        android:textSize="18sp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/back_gradient_start" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@+id/first_name"
                        android:textSize="18sp"
                        android:id="@+id/last_name_value"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/back_gradient_start" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/email_value"
                        android:layout_below="@+id/last_name"
                        android:textSize="18sp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/back_gradient_start" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/enabled_value"
                        android:layout_below="@+id/email"
                        android:textSize="18sp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/back_gradient_start" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/service_value"
                        android:layout_below="@+id/enabled"
                        android:textSize="18sp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/back_gradient_start" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/username_value"
                        android:layout_below="@+id/service"
                        android:textSize="18sp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/back_gradient_start" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/create_on_value"
                        android:layout_below="@+id/username"
                        android:textSize="18sp"
                        android:layout_alignParentBottom="true"
                        android:textColor="@color/back_gradient_start" />

                </RelativeLayout>

            </ScrollView>



        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:id="@+id/bottom_toolbar">

        <android.widget.Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/gradient"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>





</RelativeLayout>